# ROS2

./: .gitignore  README.md
ros2_ws/src/tp2/: CMakeLists.txt  compile_commands.json  package.xml
ros2_ws/src/tp2/action/: SplitText.action
ros2_ws/src/tp2/launch/: exercise1.launch.py  exercise2.launch.py
ros2_ws/src/tp2/src/: action_client.cpp  action_server.cpp  common.h  counter_publisher.cpp  counter_subscriber.cpp
tp1/pkg-created/first_pkg/: package.xml  setup.py
